--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
-            <version>2.1.7</version>            
+            <version>2.1.7</version>
         </dependency>        
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>3.2</version>
+            <version>3.2</version>            
         </dependency>
         
         <!-- Spring Libs -->
@@ -55,18 +55,18 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>3.1.1.RELEASE</version>
+            <version>3.1.1.RELEASE</version>            
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>3.1.0.RELEASE</version>
+            <version>3.1.0.RELEASE</version>            
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>3.1.0.RELEASE</version>
-        </dependency>
+            <version>3.1.0.RELEASE</version>            
+        </dependency>        
         
         <!-- XENEO Libs -->
         <dependency>
@@ -77,12 +77,12 @@
         <dependency>
             <groupId>org.xeneo</groupId>
             <artifactId>xeneo-db-impl</artifactId>
-            <version>${xeneo.version}</version>
+            <version>${xeneo.version}</version>            
         </dependency>
         <dependency>
             <groupId>org.xeneo</groupId>
             <artifactId>xeneo-simple-plugin-management</artifactId>
-            <version>${xeneo.version}</version>
+            <version>${xeneo.version}</version>            
         </dependency>
         
         <!-- Activity Plugins -->
@@ -107,8 +107,14 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.5</version>
-        </dependency>  
-                
+        </dependency>          
+
+        <dependency>
+            <groupId>org.scribe</groupId>
+            <artifactId>scribe</artifactId>
+            <version>1.3.1</version>
+        </dependency>            
+        
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
@@ -153,6 +159,11 @@
         <repository>
             <id>xeneo-snap</id>
             <url>http://www.wi.fh-kufstein.ac.at:40700/nexus/content/repositories/xeneo/</url>
+        </repository>
+        <repository>
+            <id>spring-milestone</id>
+            <name>Spring Framework Maven Milestone Repository</name>
+            <url>http://maven.springframework.org/snapshot</url>
         </repository>
     </repositories>
 </project>
